[package]
name = "gpui-test"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
gpui = { git = "https://github.com/stormasm/zed", branch = "settings" }
settings = { git = "https://github.com/stormasm/zed", branch = "settings" }
rust-embed = { version = "8.4", features = ["include-exclude"] }
